# MMSB

./: .gitignore  AGENTS.md  AGENTS_02.md  AGENT_LOOP_PROMPT.txt  API_COVERAGE_deprecated.md  API_RUST_deprecated.md  Cargo.patch  Cargo.toml  INSTRUCTION_01_START.md  INSTRUCTION_02_GATHER_CONTEXT.md  INSTRUCTION_03_CHECK_EXISTING.md  INSTRUCTION_06_COMPLETE.md  INSTRUCTION_START.md  Julia_internal_hooks.md  MMSB-module-dependency.md  MMSB_FULL_ARCHITECTURE_PROTOTYPE.md  Manifest.toml  PARSER_IMPLEMENTATION.md  PENDING_WORK.v1.md  PENDING_WORK_detailed.txt  PENDING_WORK_detailed.v2.txt  PENDING_WORK_detailed.v3.txt  PENDING_WORK_detailed.v4.txt  PENDING_WORK_detailed.v5.txt  PENDING_WORK_detailed.v6.txt  PENDING_WORK_detailed.v7.txt  PENDING_WORK_high_level.txt  PENDING_WORK_high_level.v2.txt  PENDING_WORK_high_level.v3.txt  PENDING_WORK_high_level.v4.txt  PENDING_WORK_high_level.v5.txt  PENDING_WORK_high_level.v6.txt  PENDING_WORK_high_level.v7.txt  PHASE2_SUMMARY.md  Project.toml  README.md  RELEASE_NOTES.md  Summary_of_Missing_Work.txt  TEST_EXECUTION_GUIDE.md  TO_DO_FIX.md  (+51 more)
mmsb-chromium/: Cargo.toml  run_examples.sh
mmsb-chromium/examples/: test_chatgpt_roundtrip.rs
mmsb-chromium/scripts/: request_hook.js  response_capture_sse.js
mmsb-chromium/src/: connection.rs  incoming.rs  lib.rs  outgoing.rs
mmsb-core/: Cargo.toml  build.rs  mmsb-proof-chain-definitions.md
mmsb-core/docs/: Architecture.md  MMSB_Architecture_Specification_v1.0.md  state_lifecycle.md
mmsb-core/examples/: quickstart.jl  rust_comprehensive_internal_tests.rs  rust_smoke_checkpoint_roundtrip.rs  rust_smoke_replay_full.rs  rust_smoke_replay_full_cuda.rs  rust_smoke_test.csv  rust_smoke_test_ffi.rs  tutorial.jl
mmsb-core/examples/_old/: rust_smoke_checkpoint_roundtrip_v1.rs
mmsb-core/src/: API.jl  MMSB.jl  STRUCTURAL_vs_STATE_CHANGE  STRUCTURAL_vs_STATE_CHANGE.md  STRUCTURAL_vs_STATE_PIPELINES.md  STRUCTURAL_vs_STATE_pending.md  STRUCTURAL_vs_STATE_plan_current_old.md  ffi.rs  lib.rs  logging.rs  prelude.rs  prelude_decision_policy.md
mmsb-core/src/01_page/: Delta.jl  allocator.rs  columnar_delta.rs  delta_validation.rs  integrity_checker.rs  mod.rs  page_commit.rs  replay_validator.rs  tlog.rs  tlog_serialization.rs
mmsb-core/src/01_types/: StateManagement.jl  delta_types.rs  page_types.rs
mmsb-core/src/02_semiring/: DeltaRouter.jl  Semiring.jl  SemiringConfig.jl  purity_validator.rs  semiring_ops.rs  semiring_types.rs  standard_semirings.rs
mmsb-core/src/03_dag/: dag_commit.rs  dag_log.rs  dag_snapshot.rs  dependency_graph.rs  edge_types.rs  graph_validator.rs  mod.rs  shadow_graph_mod.rs  shadow_graph_traversal.rs  structural_types.rs
mmsb-core/src/04_propagation/: dag_propagation.rs  mod.rs  propagation_queue.rs  tick_orchestrator.rs
mmsb-core/tests/: benchmark_01_replay.rs  benchmark_02_integrity.rs  benchmark_03_graph.rs  benchmark_04_purity.rs  benchmark_06_tick_latency.rs  benchmark_07_memory.rs  benchmark_08_invariants.rs  benchmark_09_stability.rs  benchmark_10_provenance.rs  compile_fail.rs  delta_validation.rs  judgment_integration.rs  judgment_replay.rs  passthrough_invariants.rs  semiring_fold_delta_propagation_replay.rs  stress_memory.rs  stress_stability.rs  stress_throughput.rs  week27_31_integration.rs
mmsb-events/: Cargo.toml  EXECUTION_FLOW.md  project_layout.txt  run_examples.sh
mmsb-events/examples/: proofs_with_events.rs
mmsb-events/src/: bus_traits.rs  chrome_protocol.rs  events.rs  execution_bus.rs  execution_coordinator.rs  judgment_bus.rs  learning_bus.rs  lib.rs  memory_reader.rs  mmsb_subscription.rs  parser_bus.rs  state_bus.rs
mmsb-executor/: Cargo.toml  project_layout.txt
mmsb-executor/src/: coordinator.rs  execution_loop.rs  lib.rs  module.rs
mmsb-judgment/: Cargo.toml  MMSB-Canonical-Bus-Line.md  README.md  mmsb-proof-chain-definitions.md  project_layout.txt  run_examples.sh
mmsb-judgment/examples/: test_schema.rs
mmsb-judgment/schema/: judgment.v1.schema.json  judgment_scope.v1.json  judgment_scope.v1.schema.json
mmsb-judgment/src/: AGENT.md  PENDING_JUDGEMENT_UPGRADES_deprecated.md  README.md  artifact.rs  issue.rs  judgment_config.rs  lib.rs  module.rs  types.rs
mmsb-judgment/tests/: issue_cli.rs
mmsb-memory/: ARCHITECTURE.md  Cargo.toml  NEXT_TO_DO.md  RECOVERY_INSTRUCTIONS.md  SEMANTIC_CONTRACT.md  STRUCTURAL_vs_STATE_PIPELINES_CANONICAL.md  TODO-answers.md  TODO-dag-questions.md  TODO-dag.md  TODO-questions.md  TODO.md  UPDATE_RECOVERY_INSTRUCTIONS.md  project_layout.txt  run_examples.sh  semantics_rust.md
mmsb-memory/examples/: columnar_batch.rs  dag_create_PENDING.rs  delta_merge.rs  delta_sparse.rs  example.rs  page_apply.rs  page_apply_mutate.rs  page_create.rs
mmsb-memory/src/: adapter.rs  lib.rs  memory_engine.rs  memory_engine.rs.bak.orig  types.rs  types.rs.to_delete
mmsb-memory/src/dag/: mod.rs  (+9 more)
mmsb-policy/: ARCHITECTURE.md  Cargo.toml  MMSB-module-dependency.md  README.md  REFACTOR_plan.md  mmsb-policy-scope.md  project_layout.txt  run_examples.sh
mmsb-policy/examples/: classify_intent.rs  test_policy.rs
mmsb-policy/schema/: example_policy.json
mmsb-policy/src/: classifier.rs  lib.rs  module.rs  policy.rs  policy_config.rs  scope.rs  types.rs
mmsb-service/: ARCHITECTURE.md  Cargo.toml  Claude_Prompt.md  Claude_Prompt_2.md  MMSB-Canonical-Specification.md  Notes.md  README.md  project_layout.txt  run_examples.sh  runtime.patch
mmsb-service/examples/: create_intent.rs  execution_pipeline.rs  judgment_pipeline.rs  mmsb_service_example.rs
mmsb-service/src/: lib.rs  main.rs  protocol_signal_in.rs  protocol_signal_out.rs  runtime.rs  runtime_context.rs  scheduler.rs  service.rs  service_context.rs  wake_source.rs
mmsb-service/tests/: execution_propagation_flow.rs  memory_mutation_integration.rs
mmsb-tools/declarative_code_editor/: .#INTEGRATION_SUMMARY.md  BRIDGE_ARCHITECTURE.md  BRIDGE_COMPLETE.md  Cargo.toml  INTEGRATION_SUMMARY.md  TODO.md  run_examples.sh
mmsb-tools/structural_code_editor/: Cargo.toml  README.md  run_examples.sh
mmsb-tools/structural_code_indexer/: Cargo.toml  run_examples.sh
(+1700 files in other folders)
