[workspace]
resolver = "2"
members = [
    "mmsb-core",
    "mmsb-policy",
    "mmsb-judgment",
    "mmsb-memory",
    "mmsb-events",
  # "mmsb-executor",
    "mmsb-tools/structural_code_indexer",
    "mmsb-tools/structural_code_editor",
    "mmsb-tools/declarative_code_editor",
    "mmsb-proof",
    "mmsb-authenticate",
    "mmsb-service",
    "mmsb-storage",
    "mmsb-intent",
    "mmsb-primitives",
    "mmsb-physical",
    "mmsb-propagation",
    "mmsb-device",
  # "mmsb-optimization",
]
