[package]
name = "mmsb-chromium"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "net", "io-util", "macros", "rt-multi-thread"] }
thiserror = "1.0"
sha2 = "0.10"

mmsb-events = { path = "../mmsb-events" }
mmsb-primitives = { path = "../mmsb-primitives" }

[[example]]
name = "test_chatgpt_roundtrip"
path = "examples/test_chatgpt_roundtrip.rs"
