[package]
name = "mmsb-events"
version = "0.1.0"
edition = "2021"

[lib]
name = "mmsb_events"
path = "src/lib.rs"

[dependencies]
mmsb-primitives = { path = "../mmsb-primitives" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }

mmsb-proof = { path = "../mmsb-proof" }
