[package]
name = "mmsb-executor"
version = "0.1.0"
edition = "2021"

[lib]
name = "mmsb_executor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"               # ← add this line (or latest version)

mmsb-proof = { path = "../mmsb-proof" }
mmsb-events = { path = "../mmsb-events" }
mmsb-primitives = { path = "../mmsb-primitives" }
