[package]
name = "mmsb-memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "mmsb_memory"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12"
thiserror = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mmsb-judgment = { path = "../mmsb-judgment" }
mmsb-proof = { path = "../mmsb-proof" }
mmsb-authenticate = { path = "../mmsb-authenticate" }
mmsb-storage = { path = "../mmsb-storage" }
mmsb-events = { path = "../mmsb-events" }
