[package]
name = "mmsb-policy"
version = "0.1.0"
edition = "2021"

[lib]
name = "mmsb_policy"
path = "src/lib.rs"

[features]
default = []
test-helpers = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mmsb-proof = { path = "../mmsb-proof" }
mmsb-intent = { path = "../mmsb-intent" }
mmsb-events = { path = "../mmsb-events" }

[dev-dependencies]
