[package]
name = "mmsb-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
futures = "0.3"
mmsb-proof = { path = "../mmsb-proof" }
mmsb-events = { path = "../mmsb-events" }
mmsb-primitives = { path = "../mmsb-primitives" }
mmsb-intent = { path = "../mmsb-intent" }
mmsb-policy = { path = "../mmsb-policy" }
mmsb-judgment = { path = "../mmsb-judgment" }
mmsb-memory = { path = "../mmsb-memory" }
mmsb-executor = { path = "../mmsb-executor" }
parking_lot = "0.12"

[dev-dependencies]
mmsb-propagation = { path = "../mmsb-propagation" }
tempfile = "3"
