[package]
name = "structural_code_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
mmsb-core = { path = "../../mmsb-core" }
syn = { version = "2.0", features = ["full", "parsing"] }
walkdir = "2.5"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
mmsb-judgment = { path = "../../mmsb-judgment" }
